--- a/package.json
+++ b/package.json
@@ -9,12 +9,15 @@
         "babel": "^6.23.0",
         "browser-sync": "^2.26.7",
         "cssnano": "^4.1.10",
+        "del": "^5.1.0",
         "dotenv": "^8.2.0",
         "fsevents": "^2.1.3",
         "gulp": "^4.0.2",
         "gulp-babel": "^8.0.0",
+        "gulp-cache": "^1.1.3",
         "gulp-concat": "^2.6.1",
         "gulp-connect-php": "^1.0.3",
+        "gulp-imagemin": "^7.1.0",
         "gulp-postcss": "^8.0.0",
         "gulp-sass": "^4.1.0",
         "gulp-sourcemaps": "^2.6.5",
